# valve

./: .gitignore  Boards_ctrl_basic.cpp  Boards_ctrl_basic.h  CMakeLists.txt  Traj_gen.cpp  Traj_gen.h  config.yaml  mySkew.cpp  orientation_ctrl.cpp  test_main.cpp
config/: initial_config.ini
include/: ManipulationVars.h  Traj_gen.h  ValveModule.h  calc_jacob.h  interface.h  manip_kine.h  mySkew.h  orientation_ctrl.h  robolli_legacy.h  valve_yarp.h  yarp_interface.h
src/: ManipulationVars.cpp  Traj_gen.cpp  ValveModule.cpp  calc_jacob.cpp  main_yarp.cpp  mySkew.cpp  orientation_ctrl.cpp  robolli_legacy.cpp  valve_yarp.cpp  yarp_interface.cpp
src/test/: test_yarp2robolli.cpp
